<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sanket.funplay.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maths_tricks"
        android:name="com.sanket.funplay.ui.mathstricks.MathsTricksFragment"
        android:label="@string/title_maths_tricks"
        tools:layout="@layout/fragment_maths_tricks" />

    <fragment
        android:id="@+id/navigation_puzzle"
        android:name="com.sanket.funplay.ui.puzzle.PuzzleFragment"
        android:label="@string/title_puzzles"
        tools:layout="@layout/fragment_puzzle" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.sanket.funplay.ui.puzzle.PuzzleFragment"
        android:label="@string/title_puzzles"
        tools:layout="@layout/fragment_puzzle" />
</navigation>
